--- a/src/QuickGrid/samples/QuickGridSamples.Core/wwwroot/css/app.css
+++ b/src/QuickGrid/samples/QuickGridSamples.Core/wwwroot/css/app.css
@@ -1,4 +1,4 @@
-﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -62,3 +62,7 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.highlighted-row {
+    background-color: #bdb;
+}
